styling adding to confirmation window, visual bugs existing: 1) if previous/current fields are too long, they wrap 2) previous field does not align properly with content value

--- a/src/views/Update/components/Update.module.scss
+++ b/src/views/Update/components/Update.module.scss
@@ -1,5 +1,12 @@
 @import '../../../vars';
 
+.update_item {
+  padding: 1rem;
+  align-items: center;
+  transition: background-color 150ms;
+  border-top: solid 1.5px $neutral-light-gray;
+}
+
 .update {
   margin: 1rem;
 
